# urcirak_character_animation

./: README.md  README.txt
urcirak_breathe/: CMakeLists.txt  breathe.cpp  package.xml
urcirak_breathe/config/: Makefile  breathe.sh  breathing_parameters.yaml  nop.sh  nop.yaml  ohgod.sh  ohgod.yaml  urcirak_control.yaml  yep.sh  yep.yaml
urcirak_breathe/launch/: cirak_is_breathing.perspective  cirak_rqt.launch  cirak_rqt.perspective  urcirak_breathe.launch  urcirak_move.launch
urcirak_description/: CMakeLists.txt  package.xml
urcirak_description/launch/: urcirak.rviz  urcirak_rviz.launch  urcirak_upload.launch
urcirak_description/urdf/: common.gazebo  urcirak.gazebo  urcirak.transmission.xacro  urcirak.urdf.xacro  urcirak_joint_limited_robot.urdf.xacro  urcirak_robot.urdf.xacro
urcirak_gazebo/: CMakeLists.txt  package.xml
urcirak_gazebo/controller/: arm_controller_urcirak.yaml  joint_position_controller.yaml
urcirak_gazebo/launch/: controller_utils.launch  controller_utils_b.launch  controller_utils_m.launch  urcirak.launch  urcirak_b.launch  urcirak_m.launch
urcirak_moveit_config/: CMakeLists.txt  package.xml
urcirak_moveit_config/config/: controllers.yaml  ompl_planning.yaml  urcirak.srdf
urcirak_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  warehouse.launch  (+3 more)
(+6 files in other folders)
