<?xml version="1.0"?>
<package format="2">
  <name>urcirak_breathe</name>
  <version>0.0.0</version>
  <description>The cirak_breathe package</description>

  <maintainer email="sait@todo.todo">sait</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


   <export>
   </export>
</package>
